프론트 제작, 연결 fix